# vectorsoarus

./: Cargo.toml  license.md
crates/soarus-ann/: Cargo.toml
crates/soarus-ann/src/: lib.rs
crates/soarus-cli/: Cargo.toml
crates/soarus-cli/src/: main.rs
crates/soarus-core/: Cargo.toml
crates/soarus-core/src/: lib.rs
crates/soarus-descriptors/: Cargo.toml
crates/soarus-descriptors/src/: lib.rs
crates/soarus-features/: Cargo.toml
crates/soarus-features/src/: lib.rs
crates/soarus-filters/: Cargo.toml
crates/soarus-filters/src/: lib.rs
crates/soarus-io/: Cargo.toml
crates/soarus-io/src/: lib.rs
crates/soarus-nn/: Cargo.toml
crates/soarus-nn/src/: lib.rs
crates/soarus-reg/: Cargo.toml
crates/soarus-reg/src/: lib.rs
crates/soarus-viewer/: Cargo.toml
crates/soarus-viewer/src/: lib.rs
soarus-bridge/: Cargo.toml
soarus-bridge/src/: lib.rs
