[workspace]
resolver = "2"
members = [
    "crates/soarus-core",
    "crates/soarus-io",
    "crates/soarus-nn",
    "crates/soarus-filters",
    "crates/soarus-features",
    "crates/soarus-reg",
    "crates/soarus-viewer",
    "crates/soarus-cli",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Brinn Heseltine <you@example.com>"]
repository = "https://github.com/TheToastiest/vectorsoarus"
description = "VectorSoarus — a fast, safe, SoA-first 3D point cloud engine"


[workspace.dependencies]
anyhow = "1"
thiserror = "1"
rayon = "1.10"
hashbrown = "0.14"
smallvec = "1.13"
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
bytemuck = { version = "1.16", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
# IO (small, pure-Rust)
ply-rs = "0.1.3"       # minimal PLY reader/writer (ASCII)
# optional viewers / ANN backends can be added later
