[package]
name = "soarus-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "soarus"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
soarus-core = { path = "../soarus-core" }
soarus-io = { path = "../soarus-io" }
soarus-filters = { path = "../soarus-filters" }
soarus-features = { path = "../soarus-features" }
soarus-viewer = { path = "../soarus-viewer" }
